tests/ui/closures/2229_closure_analysis/match/patterns-capture-analysis.stderr
error: First Pass analysis includes:
  --> $DIR/patterns-capture-analysis.rs:12:5
   |
LL | /     || {
LL | |
LL | |
LL | |         match variant {
...  |
LL | |     };
   | |_____^
   |
note: Capturing variant[] -> Immutable
  --> $DIR/patterns-capture-analysis.rs:15:15
   |
LL |         match variant {
   |               ^^^^^^^

error: Min Capture analysis includes:
  --> $DIR/patterns-capture-analysis.rs:12:5
   |
LL | /     || {
LL | |
LL | |
LL | |         match variant {
...  |
LL | |     };
   | |_____^
   |
note: Min Capture variant[] -> Immutable
  --> $DIR/patterns-capture-analysis.rs:15:15
   |
LL |         match variant {
   |               ^^^^^^^

error: First Pass analysis includes:
  --> $DIR/patterns-capture-analysis.rs:30:5
   |
LL | /     || {
LL | |
LL | |         match variant {
LL | |             _ => {}
LL | |         }
LL | |     };
   | |_____^

error: First Pass analysis includes:
  --> $DIR/patterns-capture-analysis.rs:49:5
   |
LL | /     || {
LL | |
LL | |         match variant {
LL | |             SingleVariant::Points(_) => {}
LL | |         }
LL | |     };
   | |_____^

error: First Pass analysis includes:
  --> $DIR/patterns-capture-analysis.rs:63:5
   |
LL | /     || {
LL | |
LL | |
LL | |         match variant {
...  |
LL | |     };
   | |_____^
   |
note: Capturing variant[(0, 0)] -> Immutable
  --> $DIR/patterns-capture-analysis.rs:66:15
   |
LL |         match variant {
   |               ^^^^^^^

error: Min Capture analysis includes:
  --> $DIR/patterns-capture-analysis.rs:63:5
   |
LL | /     || {
LL | |
LL | |
LL | |         match variant {
...  |
LL | |     };
   | |_____^
   |
note: Min Capture variant[(0, 0)] -> Immutable
  --> $DIR/patterns-capture-analysis.rs:66:15
   |
LL |         match variant {
   |               ^^^^^^^

error: First Pass analysis includes:
  --> $DIR/patterns-capture-analysis.rs:82:5
   |
LL | /     || {
LL | |
LL | |         match array {
LL | |             [_,_,_] => {}
LL | |         }
LL | |     };
   | |_____^

error: First Pass analysis includes:
  --> $DIR/patterns-capture-analysis.rs:94:5
   |
LL | /     || {
LL | |
LL | |         match array {
LL | |             [_, _, _] => {}
LL | |         }
LL | |     };
   | |_____^

error: First Pass analysis includes:
  --> $DIR/patterns-capture-analysis.rs:107:5
   |
LL | /     || {
LL | |
LL | |         match f {
LL | |             Foo([_, _, _]) => ()
LL | |         }
LL | |     };
   | |_____^

error: First Pass analysis includes:
  --> $DIR/patterns-capture-analysis.rs:129:5
   |
LL | /     || {
LL | |
LL | |
LL | |         match variant {
...  |
LL | |     };
   | |_____^
   |
note: Capturing variant[] -> Immutable
  --> $DIR/patterns-capture-analysis.rs:132:15
   |
LL |         match variant {
   |               ^^^^^^^

error: Min Capture analysis includes:
  --> $DIR/patterns-capture-analysis.rs:129:5
   |
LL | /     || {
LL | |
LL | |
LL | |         match variant {
...  |
LL | |     };
   | |_____^
   |
note: Min Capture variant[] -> Immutable
  --> $DIR/patterns-capture-analysis.rs:132:15
   |
LL |         match variant {
   |               ^^^^^^^

error: First Pass analysis includes:
  --> $DIR/patterns-capture-analysis.rs:147:5
   |
LL | /     || {
LL | |
LL | |
LL | |         match slice {
...  |
LL | |     };
   | |_____^
   |
note: Capturing slice[Deref] -> Immutable
  --> $DIR/patterns-capture-analysis.rs:150:15
   |
LL |         match slice {
   |               ^^^^^

error: Min Capture analysis includes:
  --> $DIR/patterns-capture-analysis.rs:147:5
   |
LL | /     || {
LL | |
LL | |
LL | |         match slice {
...  |
LL | |     };
   | |_____^
   |
note: Min Capture slice[Deref] -> Immutable
  --> $DIR/patterns-capture-analysis.rs:150:15
   |
LL |         match slice {
   |               ^^^^^

error: First Pass analysis includes:
  --> $DIR/patterns-capture-analysis.rs:159:5
   |
LL | /     || {
LL | |
LL | |
LL | |         match slice {
...  |
LL | |     };
   | |_____^
   |
note: Capturing slice[Deref] -> Immutable
  --> $DIR/patterns-capture-analysis.rs:162:15
   |
LL |         match slice {
   |               ^^^^^

error: Min Capture analysis includes:
  --> $DIR/patterns-capture-analysis.rs:159:5
   |
LL | /     || {
LL | |
LL | |
LL | |         match slice {
...  |
LL | |     };
   | |_____^
   |
note: Min Capture slice[Deref] -> Immutable
  --> $DIR/patterns-capture-analysis.rs:162:15
   |
LL |         match slice {
   |               ^^^^^

error: First Pass analysis includes:
  --> $DIR/patterns-capture-analysis.rs:171:5
   |
LL | /     || {
LL | |
LL | |
LL | |         match slice {
...  |
LL | |     };
   | |_____^
   |
note: Capturing slice[Deref] -> Immutable
  --> $DIR/patterns-capture-analysis.rs:174:15
   |
LL |         match slice {
   |               ^^^^^

error: Min Capture analysis includes:
  --> $DIR/patterns-capture-analysis.rs:171:5
   |
LL | /     || {
LL | |
LL | |
LL | |         match slice {
...  |
LL | |     };
   | |_____^
   |
note: Min Capture slice[Deref] -> Immutable
  --> $DIR/patterns-capture-analysis.rs:174:15
   |
LL |         match slice {
   |               ^^^^^

error: First Pass analysis includes:
  --> $DIR/patterns-capture-analysis.rs:188:5
   |
LL | /     || {
LL | |
LL | |         match slice {
LL | |             [..] => {},
...  |
LL | |     };
   | |_____^

error: aborting due to 18 previous errors

